docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/my-mc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mc-deployment
  namespace: openta-prod
spec:
  selector:
    matchLabels:
      app: products
      department: sales
  replicas: 1
  template:
    metadata:
      labels:
        app: products
        department: sales
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
      - name: hello-again
        image: "gcr.io/google-samples/node-hello:1.0"
