docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx
  namespace: openta-prod
spec:
  selector:
    matchLabels:
      run: mynginx
  template:
    metadata:
      labels:
        run: mynginx
    spec:
      containers:
      - image: s53ostlund/nginx:simple3
        imagePullPolicy: Always
        name: mynginx
        ports:
        - containerPort: 8080
          protocol: TCP
