docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weba
  namespace: openta-prod
spec:
  selector:
    matchLabels:
      run: weba
  template:
    metadata:
      labels:
        run: weba
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: IfNotPresent
        name: weba
        ports:
        - containerPort: 8080
          protocol: TCP
