docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/my-mc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mc-service
  namespace: openta-prod
spec:
  type: NodePort
  selector:
    app: products
    department: sales
  ports:
  - name: my-first-port
    protocol: TCP
    port: 60001
    targetPort: 50001
  - name: my-second-port
    protocol: TCP
    port: 60002
    targetPort: 50002
