docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx
  namespace: openta-prod
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: mynginx
  type: NodePort
