docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/v212b-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: "v212b"
  name: v212b
  namespace: openta-prod
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: "v212b"
  type: NodePort
status:
  loadBalancer: {}
