docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/web-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: web2
  namespace: openta-prod
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web2
  type: NodePort
