docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weba
  namespace: openta-prod
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: weba
  type: NodePort
