docker_deploy/kubernetes-stellan/examples/opentaproject.com/yamls/my-mc-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-mc-ingress
  namespace: openta-prod
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: pts-local-address-local
    #networking.gke.io/managed-certificates: my-mc-certificate-2 DOES NOT WORK WITH nginx-ingress
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-staging"
    #cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - opentaproject.com
    #- opentaproject.com
    #- '*.opentaproject.com'
    secretName: acme-dns
  #- secretName: test-ingress-1-secret-name
  #- secretName: test-ingress-2-secret-name
  rules:
  - host: '*.opentaproject.com'
  #  http:
  #    paths:
  #    - backend:
  #        serviceName: my-mc-service
  #        servicePort: my-first-port
  #- host: v2.opentaproject.com
  #- http:
  #    paths:
  #    - backend:
  #        serviceName: my-mc-service
  #        servicePort: my-second-port
  #- host: opentaproject.com
    http:
      paths:
      #- path: /
      #  backend:
      #    serviceName: my-mc-service
      #    servicePort: my-first-port
      - path: /mynginx
        backend:
          serviceName: mynginx
          servicePort: 8080
      - path: /webtwo
        backend:
          serviceName: web2
          servicePort: 8080
      - path: /v212b
        backend:
          serviceName: v212b
          servicePort: 8080
      - path: /v300
        backend:
          serviceName: v300
          servicePort: 8080
